[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fpdf = "^1.7.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pypdf = "^4.1.0"
pymupdf = "^1.23.26"
docusign-esign = "^3.25.1"
python-multipart = "^0.0.9"
requests = "^2.31.0"
pytest = "^8.1.1"
httpx = "^0.27.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"